Removed font weight due to bug on IOS safari where letter spacing got weird

--- a/_vds-src/scss/_vds-typography.scss
+++ b/_vds-src/scss/_vds-typography.scss
@@ -58,7 +58,7 @@ h1, .h1 {
 h1.display, .h1.display {
     font-family: 'FS Elliot Pro Heavy';
     font-style: normal;
-    font-weight: 800;
+    // font-weight: 800;
     font-size: 1.75rem;
     line-height: 2.125rem; /* or 121% */
 }
